# VosyanBot

./: .env.example  .gitignore  bot.log.2025-08-03  cli.py  config.ini  docker-compose.yaml  logging.ini  pyproject.toml  requirements.txt  requirements_test.txt  run.py
.github/workflow/: deploy.yml
.github/workflows/: deploy.yml
cli/: __main__.py  containers.py  methods.py  services.py
docker/: Dockerfile
src/: applications.py  cli.py  db_functions.py  db_init.py  messages.py  models.py  repositories.py  run.py
src/applications/event_members/: containers.py  invite.py  leave.py  sidekick.py
src/applications/events/: containers.py  create.py  delete.py  get_list.py  remind.py  update.py
src/applications/members/: registry.py  unregister.py
src/domain/entities/: __init__.py
src/domain/events/: models.py  repositories.py
src/infrastructure/: db_init.py  logger_init.py
src/infrastructure/containers/: events.py
src/infrastructure/event_members/: cli.py
src/infrastructure/events/: cli.py  containers.py  db.py  repositories.py
src/infrastructure/telegram/: __init__.py
src/presenters/commands/: telegram.py
src/presenters/commands/telegram/: event_members.py  events.py  keyboard_handler.py  presenters.py
tests/unit/: test_events.py
