[project]
name = "vosyanbot"
version = "0.1.0"
description = ""
authors = [
    {name = "Vasiliy Nikiforov",email = "kaktusv6@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx (>=0.27)",
    "markdown-it-py (==3.0.0)",
    "peewee (==3.16.3)",
    "peewee-db-evolve (==3.7.6)",
    "pymysql (==1.1.1)",
    "python-dotenv (==1.1.1)",
    "python-telegram-bot (==22.5)",
    "typer (==0.16.0)",
    "typing-extensions (==4.14.1)",
    "dependency-injector (>=4.48.2,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
